// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute asset-price endpoint error calls when successfully requests the API should throw and exception if the response format is unexpected 1`] = `
Object {
  "error": Object {
    "feedID": "{\\"data\\":{\\"endpoint\\":\\"asset-price\\",\\"assetAddress\\":\\"0x8a90CAb2b38dba80c64b7734e58Ee1dB38B8992e\\",\\"tokenId\\":11}}",
    "message": "The estimated price returned is not a number.",
    "name": "AdapterError",
    "url": "https:/api.upshot.io/v1/prices/latest",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 200,
}
`;

exports[`execute asset-price endpoint success calls returns the correct result 1`] = `
Object {
  "data": Object {
    "data": Array [
      Object {
        "assetId": "0x8a90CAb2b38dba80c64b7734e58Ee1dB38B8992e/11",
        "currentPricing": Object {
          "assetId": "0x8a90CAb2b38dba80c64b7734e58Ee1dB38B8992e/11",
          "estimatedPrice": "23772203809000000000",
        },
      },
    ],
    "message": "Current Price gotten successfully for assets in query",
    "result": 23772203809000000000,
    "status": true,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 23772203809000000000,
  "statusCode": 200,
}
`;

exports[`execute statistic endpoint error calls when successfully requests the API should throw and exception if the response format is unexpected 1`] = `
Object {
  "error": Object {
    "feedID": "{\\"data\\":{\\"endpoint\\":\\"statistics\\",\\"assetAddress\\":\\"0xb47e3cd837ddf8e4c57f05d70ab865de6e193bbb\\"}}",
    "message": "Unexpected error occurred forming the result from the API response. Error: invalid BigNumber string (argument=\\"value\\", value=\\"potato\\", code=INVALID_ARGUMENT, version=bignumber/5.6.2)",
    "name": "AdapterError",
    "url": "https:/api.upshot.io/v1/collections/contractaddress/0xb47e3cd837ddf8e4c57f05d70ab865de6e193bbb",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 200,
}
`;

exports[`execute statistic endpoint success calls returns the correct result 1`] = `
Object {
  "data": Object {
    "data": Object {
      "description": "CryptoPunks launched as a fixed set of 10,000 items in mid-2017 and became one of the inspirations for the ERC-721 standard. They have been featured in places like The New York Times, Christie’s of London, Art|Basel Miami, and The PBS NewsHour.",
      "id": 1,
      "imageUrl": "https://lh3.googleusercontent.com/BdxvLseXcfl57BiuQcQYdJ64v-aI8din7WPk0Pgo3qQFhAUH-B6i-dCqqc_mCkRIzULmwzwecnohLhrcH8A9mpWIZqA7ygc52Sr81hE=s120",
      "name": "CryptoPunks",
      "slug": "cryptopunks",
      "stats": Array [
        Object {
          "floor": "66500000000000000000",
          "marketCap": "104534840290605916663324",
        },
      ],
    },
    "message": "collection retrieved successfully",
    "result": Object {
      "floorPrice": 66500000000000000000,
      "marketCap": 1.0453484029060591e+23,
      "statistics": "0x00000000000000039adf75aafb7a00000000000000001622d85502fc3d5aae1c",
    },
    "status": true,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": Object {
    "floorPrice": 66500000000000000000,
    "marketCap": 1.0453484029060591e+23,
    "statistics": "0x00000000000000039adf75aafb7a00000000000000001622d85502fc3d5aae1c",
  },
  "statusCode": 200,
}
`;
